workaround issue with csproj/fsproj in same dir as project.json

--- a/src/FsCheck/FsCheck.fsproj
+++ b/src/FsCheck/FsCheck.fsproj
@@ -13,6 +13,7 @@
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <TargetFSharpCoreVersion>4.4.0.0</TargetFSharpCoreVersion>
+    <ResolveNuGetPackages>false</ResolveNuGetPackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
