use dotnet-mergenupkg tool to merge netcore package inside normal package

--- a/src/FsCheck.Xunit/project.json
+++ b/src/FsCheck.Xunit/project.json
@@ -26,6 +26,7 @@
     "dotnet-compile-fsc": {
       "version": "1.0.0-preview2-*",
       "imports": "dnxcore50"
-    }
+    },
+    "dotnet-mergenupkg": { "target": "package", "version": "1.0.*" }
   }
 }
