--- a/src/FsCheck/project.json
+++ b/src/FsCheck/project.json
@@ -39,6 +39,7 @@
     "dotnet-compile-fsc": {
       "version": "1.0.0-preview2-*",
       "imports": "dnxcore50"
-    }
+    },
+    "dotnet-mergenupkg": { "target": "package", "version": "1.0.*" }
   }
 }
