--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,41 @@
 language: csharp
 
-sudo: false
+addons:
+  apt:
+    packages:
+    - gettext
+    - libcurl4-openssl-dev
+    - libicu-dev
+    - libssl-dev
+    - libunwind8
+    - zlib1g
+
+matrix:
+  include:
+    - os: linux # Ubuntu 14.04
+      dist: trusty
+      sudo: required
+      env: DOTNET_SDK_URL=https://dotnetcli.blob.core.windows.net/dotnet/preview/Binaries/1.0.0-preview2-003121/dotnet-dev-ubuntu-x64.1.0.0-preview2-003121.tar.gz
+    - os: osx # OSX 10.11
+      osx_image: xcode7.2
+      env: DOTNET_SDK_URL=https://dotnetcli.blob.core.windows.net/dotnet/preview/Binaries/1.0.0-preview2-003121/dotnet-dev-osx-x64.1.0.0-preview2-003121.tar.gz
+
+before install:
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update               ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install openssl      ; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew link --force openssl ; fi
+
+install:
+  # Download .NET Core SDK and add to PATH
+  - export DOTNET_INSTALL_DIR="$PWD/.dotnetsdk"
+  - mkdir -p "$DOTNET_INSTALL_DIR"
+  - curl -L "$DOTNET_SDK_URL" | tar -xzv -C "$DOTNET_INSTALL_DIR"
+  - export PATH="$DOTNET_INSTALL_DIR:$PATH"
 
 script:
+  # dotnet info
+  - dotnet --info
+  # build
   - ./build.sh GenerateDocs
 
 cache:
