--- a/src/FsCheck.Xunit/project.json
+++ b/src/FsCheck.Xunit/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.3.1-*",
+  "version": "2.3.1",
   "buildOptions": {
     "debugType": "portable",
     "compilerName": "fsc",
@@ -11,8 +11,10 @@
     }
   },
   "dependencies": {
-    "Microsoft.FSharp.Core.netcore": "1.0.0-alpha-*",    
-    "FsCheck": { "target": "project" },
+    "Microsoft.FSharp.Core.netcore": "1.0.0-alpha-*",
+    "FsCheck": {
+      "target": "project"
+    },
     "xunit.extensibility.execution": "2.2.0-beta2-build3300"
   },
   "frameworks": {
@@ -27,6 +29,9 @@
       "version": "1.0.0-preview2-*",
       "imports": "dnxcore50"
     },
-    "dotnet-mergenupkg": { "target": "package", "version": "1.0.*" }
+    "dotnet-mergenupkg": {
+      "target": "package",
+      "version": "1.0.*"
+    }
   }
 }
