--- a/src/FsCheck/project.json
+++ b/src/FsCheck/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "2.3.1-*",
+  "version": "2.3.1",
   "buildOptions": {
     "debugType": "portable",
     "compilerName": "fsc",
@@ -40,6 +40,9 @@
       "version": "1.0.0-preview2-*",
       "imports": "dnxcore50"
     },
-    "dotnet-mergenupkg": { "target": "package", "version": "1.0.*" }
+    "dotnet-mergenupkg": {
+      "target": "package",
+      "version": "1.0.*"
+    }
   }
 }
